KUYAMWEB-7871: [BUG-Kuyam] Schedule is not well aligned

--- a/Kuyam-home/public/content/style.css
+++ b/Kuyam-home/public/content/style.css
@@ -5138,15 +5138,15 @@ only screen and (               min-resolution:2dppx)      and (min-width:320px)
           font-weight: 700; }
         .book-option .option-select ul li .table-css {
           width: 100%; }
-          @media (max-width: 374px) {
+          @media (max-width: 359px) {
             .book-option .option-select ul li .table-css {
               display: block; } }
         .book-option .option-select ul li .tr {
           cursor: pointer; }
-          @media (max-width: 374px) {
+          @media (max-width: 359px) {
             .book-option .option-select ul li .tr {
               display: block; } }
-          @media (max-width: 374px) {
+          @media (max-width: 359px) {
             .book-option .option-select ul li .tr:after {
               content: '';
               display: block;
@@ -5158,7 +5158,7 @@ only screen and (               min-resolution:2dppx)      and (min-width:320px)
           @media (max-width: 767px) {
             .book-option .option-select ul li .td {
               padding-left: 5px; } }
-          @media (max-width: 374px) {
+          @media (max-width: 359px) {
             .book-option .option-select ul li .td {
               display: block;
               float: left;
@@ -5166,7 +5166,7 @@ only screen and (               min-resolution:2dppx)      and (min-width:320px)
               min-height: 1px; } }
           .book-option .option-select ul li .td:first-child {
             padding: 0; }
-            @media (max-width: 374px) {
+            @media (max-width: 359px) {
               .book-option .option-select ul li .td:first-child {
                 float: none;
                 width: 100% !important; } }
@@ -5383,8 +5383,11 @@ only screen and (               min-resolution:2dppx)      and (min-width:320px)
 @media (min-width: 768px) {
   .table-calendar-header {
     margin-left: 13px;
-    margin-right: 36px;
+    margin-right: 13px;
     position: relative; }
+  .services-list {
+    margin-left: 13px;
+    margin-right: 13px; }
   .slide-calendar .rslides_nav.prev {
     left: -13px; }
   .slide-calendar .rslides_nav.next {
