--- a/Kuyam-home/src/assets/css/sass/pages/book-details/_option.scss
+++ b/Kuyam-home/src/assets/css/sass/pages/book-details/_option.scss
@@ -167,7 +167,7 @@
                 .table-css{
                     width: 100%;
 
-                    @media (max-width: 374px) {
+                    @media (max-width: 359px) {
                         display: block;
                     }
                 }
@@ -175,12 +175,12 @@
                 .tr{
                     cursor: pointer;
 
-                    @media (max-width: 374px) {
+                    @media (max-width: 359px) {
                         display: block;
                     }
 
                     &:after{
-                        @media (max-width: 374px) {
+                        @media (max-width: 359px) {
                             content: '';
                             display: block;
                             clear: both;
@@ -197,7 +197,7 @@
                         padding-left: 5px;
                     }
 
-                    @media (max-width: 374px) {
+                    @media (max-width: 359px) {
                         display: block;
                         float: left;
                         width: 33.3333% !important;
@@ -207,7 +207,7 @@
                     &:first-child{
                         padding: 0;
 
-                        @media (max-width: 374px) {
+                        @media (max-width: 359px) {
                             float: none;
                             width: 100% !important;
                         }
