--- a/Kuyam-home/src/assets/css/sass/pages/book-details/_services.scss
+++ b/Kuyam-home/src/assets/css/sass/pages/book-details/_services.scss
@@ -132,8 +132,12 @@
 @media (min-width: 768px) {
     .table-calendar-header {
         margin-left: 13px;
-        margin-right: 36px;
+        margin-right: 13px;
         position: relative;
+    }
+    .services-list{
+        margin-left: 13px;
+        margin-right: 13px;
     }
     .slide-calendar .rslides_nav.prev{
         left: -13px;
